[package]
name = "gobankrupt"
version = "0.1.0"
authors = ["nekogawa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
web3 = "0.15.0"
tokio = "0.2.25"
rustc-hex = "2.1.0"
